<resources>
    <string name="app_name">NoteApp</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="color">Color</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="delete_note">Delete Note</string>
    <string name="add_note">Add Note</string>
    <string name="your_note">Your note</string>
    <string name="sort">Sort</string>
    <string name="note_deleted">Note deleted</string>
    <string name="undo">Undo</string>
    <string name="save_note">Save note</string>
</resources>